--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        coroutines_version = "1.6.4"
+        hilt_version = '2.44'
+        lifecycle_version = "2.5.1"
+        nav_version = "2.5.3"
+        retrofit_version = "2.9.0"
+        room_version = "2.4.3"
+        view_pager_2_version = "1.0.0"
+        paging_version = "3.1.1"
+        glide_version = "4.14.2"
+        toastic_version = "1.0.1"
+        activity_version = "1.6.1"
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'androidx.navigation.safeargs' version '2.5.3' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
