--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,6 @@ dependencies {
     // glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
-    // toastic
+    // toast
     implementation "com.github.yagmurerdogan:Toastic:$toastic_version"
 }
